--- a/Python/modulo1_tema4_Py_20_matplotlib.ipynb
+++ b/Python/modulo1_tema4_Py_20_matplotlib.ipynb
@@ -26,8 +26,10 @@
    "outputs": [],
    "source": [
     "if 'google.colab' in str(get_ipython()):\n",
-    "    !git clone https://github.com/griu/mbdds_fc20.git\n",
-    "    %cd mbdds_fc20/Python"
+    "    !git clone https://github.com/griu/mbdds_fc20.git /content/mbdds_fc20\n",
+    "    !git pull\n",
+    "    %cd /content/mbdds_fc20/Python\n",
+    "    !python -m pip install -r requirementsColab.txt"
    ]
   },
   {
@@ -483,9 +485,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mbdds_fc20_env",
+   "display_name": "mbdds_rpy20",
    "language": "python",
-   "name": "bds_griu_env"
+   "name": "mbdds_rpy20"
   },
   "language_info": {
    "codemirror_mode": {
@@ -497,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
