--- a/Python/modulo1_tema4_Py_60_anexo.ipynb
+++ b/Python/modulo1_tema4_Py_60_anexo.ipynb
@@ -21,179 +21,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "if 'google.colab' in str(get_ipython()):\n",
-    "    !git clone https://github.com/griu/mbdds_fc20.git\n",
-    "    %cd mbdds_fc20/Python"
+    "    !git clone https://github.com/griu/mbdds_fc20.git /content/mbdds_fc20\n",
+    "    !git pull\n",
+    "    %cd /content/mbdds_fc20/Python\n",
+    "    !python -m pip install -r requirementsColab.txt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ANEXO"
+    "# ANEXO: README DE PYTHON"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Frames Starwars"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Para crear los data frames de Starwars."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "import pandas as pd\n",
-    "import numpy as np\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# exec(open('get_entity.py').read())\n",
-    "def get_entity(entity = None, url_base = 'http://swapi.dev/api/'):\n",
-    "# https://swapi.dev/documentation#root\n",
-    "    \n",
-    "    page_num = 1\n",
-    "    results_acum = []\n",
-    "    entity_list = [\"films\",\"people\",\"planets\",\"species\",\"starships\",\"vehicles\"]\n",
-    "    \n",
-    "    if(entity not in entity_list):\n",
-    "        page_num = None\n",
-    "        print('Call a valid entity: ' + ','.join(entity_list))\n",
-    "    \n",
-    "    while(page_num is not None):\n",
-    "        url = \"\".join([url_base, entity, '/?page=', str(page_num)])\n",
-    "        rjson = requests.get(url).json()\n",
-    "        results_acum = results_acum + rjson['results']\n",
-    "        if(rjson['next'] is not None):\n",
-    "            page_num = page_num + 1\n",
-    "        else:\n",
-    "            page_num = None\n",
-    "            \n",
-    "    if (len(results_acum) > 0):\n",
-    "        results_df = pd.DataFrame(results_acum)\n",
-    "    else:\n",
-    "        results_df = entity_list\n",
-    "    \n",
-    "    return(results_df)\n",
+    "## PREPARACIÓN DEL ENTORNO COLAB\n",
     "\n",
-    "def str2num(df,num_list):\n",
-    "    num_list = [lab for lab in num_list if lab in df.columns]\n",
-    "    num_list = [lab for lab in num_list if  df[lab].dtype==object]\n",
-    "    for x in num_list:\n",
-    "        if (x==\"crew\"):\n",
-    "            df.loc[df[x] == \"30-165\",x] = \"165\"\n",
-    "        df[x] = pd.to_numeric(df[x].replace('[^0-9\\.-]', '', regex=True), errors='coerce').replace({np.nan: None})\n",
-    "    return(df)"
+    "Des de [Colab](http://colab.research.google.com), hay que clonar el repositorio cada vez que inicias un nuevo libro. En los libros se incluyen el código necesario."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Call a valid entity: films,people,planets,species,starships,vehicles\n"
-     ]
-    }
-   ],
    "source": [
-    "res = get_entity()"
+    "## PREPARACIÓN ENTORNO LOCAL-JUPYTER (OPCIONAL)\n",
+    "\n",
+    "### CLONAR REPOSITORIO\n",
+    "\n",
+    "En local puedes utilizar el mismo proyecto que has clonado en el [README DE R](../R/README.md). \n",
+    "\n",
+    "Para actualizarlo de nuevo, des de consola.\n",
+    "\n",
+    "```\n",
+    "cd mbdds_fc20\n",
+    "git pull\n",
+    "cd Python\n",
+    "```\n",
+    "\n",
+    "### CREAR EN LOCAL UN NUEVO ENVIRONMENT DE ANACONDA\n",
+    "\n",
+    "Abrimos una línea de comandos (con *Anaconda 3.0* ya disponible).\n",
+    "\n",
+    "- Windows: Escribimos `Anaconda` en el menú Inicio y aparecerá la consola MS-DOS de Anaconda.\n",
+    "- Linux: Abrimos Terminal\n",
+    "\n",
+    "```\n",
+    "conda deactivate\n",
+    "conda create -n mbdds_rpy20 python=3.6.9\n",
+    "conda activate mbdds_rpy20\n",
+    "```\n",
+    "\n",
+    "Verifica que se ha creado y está activo.\n",
+    "\n",
+    "```\n",
+    "conda info --envs\n",
+    "```\n",
+    "\n",
+    "### INSTALA LAS LIBRERIAS DE PYTHON\n",
+    "\n",
+    "```\n",
+    "cd mbdds_fc20/Python\n",
+    "conda activate mbdds_rpy20\n",
+    "python -m pip install -r requirementsColab.txt\n",
+    "```\n",
+    "\n",
+    "### PUBLICAR EL KERNEL\n",
+    "\n",
+    "Para acceder al nuevo environment desde Jupyter necesitas publicar el kernel.\n",
+    "\n",
+    "```\n",
+    "python -m ipykernel install --user --name mbdds_rpy20 --display-name \"mbdds_rpy20\"\n",
+    "```\n",
+    "\n",
+    "Puede tardar unos minutos en publicarse.\n",
+    "\n",
+    "### LANZAR ENTORNO JUPYTER NOTEBOOK\n",
+    "\n",
+    "Para acceder al servidor Jupyter. \n",
+    "\n",
+    "```\n",
+    "conda activate mbdds_rpy20\n",
+    "jupyter notebook\n",
+    "```\n",
+    "\n",
+    "Debería abrirse un navegador con acceso a Jupyter desde donde podrás acceder a los notebooks.\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['films', 'people', 'planets', 'species', 'starships', 'vehicles']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "films_df = get_entity(\"films\")\n",
-    "people_df = get_entity(\"people\")\n",
-    "planets_df = get_entity(\"planets\")\n",
-    "species_df = get_entity(\"species\")\n",
-    "starships_df = get_entity(\"starships\")\n",
-    "vehicles_df = get_entity(\"vehicles\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "people_num = [\"height\",\"mass\",\"birth_year\"]\n",
-    "planets_num = [\"diameter\",\"rotation_period\",\"orbital_period\",\"population\",\"surface_water\"]\n",
-    "species_num = [\"average_height\",\"average_lifespan\"]\n",
-    "starships_num = [\"passengers\",\"length\",\"crew\",\"cost_in_credits\",\"cargo_capacity\",\"hyperdrive_rating\",\"MGLT\"]\n",
-    "vehicles_num = [\"cargo_capacity\",\"cost_in_credits\",\"crew\",\"length\",\"max_atmosphering_speed\",\"passengers\"]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "people_df2 = str2num(people_df,people_num)\n",
-    "planets_df2 = str2num(planets_df,planets_num)\n",
-    "species_df2 = str2num(species_df,species_num)\n",
-    "starships_df2 = str2num(starships_df,starships_num)\n",
-    "vehicles_df2 = str2num(vehicles_df,vehicles_num)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "people_df2.to_pickle(\"www/people_df.pkl\")\n",
-    "planets_df2.to_pickle(\"www/planets_df.pkl\")\n",
-    "species_df2.to_pickle(\"www/species_df.pkl\")\n",
-    "starships_df2.to_pickle(\"www/starships_df.pkl\")\n",
-    "vehicles_df2.to_pickle(\"www/vehicles_df.pkl\")"
+    "## PREPARACIÓN DEL ENTORNO COLAB\n",
+    "\n",
+    "Des de [Colab](http://colab.research.google.com), hay que clonar el repositorio cada vez que inicias un nuevo libro. En la cabecera de los libros se incluyen el código necesario."
    ]
   },
   {
@@ -210,7 +138,7 @@
   "kernelspec": {
    "display_name": "mbdds_fc20_env",
    "language": "python",
-   "name": "bds_griu_env"
+   "name": "mbdds_fc20_env"
   },
   "language_info": {
    "codemirror_mode": {
