--- a/R/modulo1_tema4_R_02_ggplot2.Rmd
+++ b/R/modulo1_tema4_R_02_ggplot2.Rmd
@@ -7,7 +7,7 @@
 
 ggplot2 es un sistema coherente para hacer gráficos.
 
-```{r, fig.width=3.2,fig.asp=4/5, fig.cap='grafico de puntos'}
+```{r fig.width=3.2, fig.asp=4/5, fig.cap="grafico de puntos"}
 library(ggplot2)
 ggplot(data = pressure) +  
   geom_point(mapping = aes(x = temperature, y = pressure))
@@ -43,13 +43,13 @@ p1 <- p1 +   labs(title = "Presión de vapor del mercurio"
 
 Para obtener el plot, ejecuta el objeto.
 
-```{r, fig.width=3.2,fig.asp=4/5, fig.cap='grafico de líneas y puntos'}
+```{r fig.width=3.2, fig.asp=4/5, fig.cap="grafico de líneas y puntos"}
 p1
 ```
 
 Para añadir graduación continua del color por temperatura. 
 
-```{r, fig.width=4.7,fig.asp=4/7, fig.cap='Escala de color contínua'}
+```{r fig.width=4.7, fig.asp=4/7, fig.cap="Escala de color contínua"}
 p1 <- ggplot(data = pressure, mapping = aes(x = temperature, y = pressure
     , color = temperature)) +
   geom_point() +
@@ -65,7 +65,7 @@ p1
 
 Otros ejemplos de geoms con los datos de países en 2007.
 
-```{r, warnings=FALSE, message=FALSE}
+```{r warnings=FALSE, message=FALSE}
 library(ggrepel)
 
 paises07 <- as.data.frame(paises %>% filter(anio==2007))  # paises en 2007
@@ -85,7 +85,7 @@ p4 <- ggplot(paises07 %>% arrange(desc(esperanza_de_vida)) %>% head(25),
   geom_label_repel(aes(label=pais), size=3)
 ```
 
-```{r, echo=FALSE, fig.width=11,fig.height=5, warning=FALSE, message=FALSE}
+```{r echo=FALSE, fig.width=11, fig.height=5, warning=FALSE, message=FALSE}
 suppressPackageStartupMessages(library(cowplot))
 # arrange two plots into one column
 plot_grid(p1, p2, p3, p4,
